Decrease profile padding to prevent overflow on 1080p monitors

--- a/public/site.css
+++ b/public/site.css
@@ -93,7 +93,7 @@ h1 {
   width: 65em;
   height:fit-content;
   left: calc(50% - (65em + 20px)/2 - 0.5px);
-  top: 100px;
+  top: 50px;
   margin-top: 50px;
   padding-left: 20px;
   padding-right: 20px;
@@ -114,7 +114,7 @@ h1 {
 }
 
 #profile > h2 {
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 #profile > div > a {
